--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jovo-sample-voice-app-nodejs",
+  "name": "alexa-hf-skill",
   "version": "1.0.0",
-  "description": "A sample voice app that works with the Jovo framework",
+  "description": "Alexa HF skill",
   "main": "index.js",
   "dependencies": {
     "jovo-framework": "^1.3.1"
@@ -10,14 +10,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jovotech/jovo-sample-voice-app-nodejs.git"
-  },
-  "author": "Jovo",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/jovotech/jovo-sample-voice-app-nodejs/issues"
-  },
-  "homepage": "https://github.com/jovotech/jovo-sample-voice-app-nodejs#readme"
+  "author": "",
+  "license": "Apache-2.0"
 }
