--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "jovo-framework": "^1.3.1",
+    "node-schedule": "^1.3.0",
     "request": "^2.87.0",
     "sync-request": "^6.0.0"
   },
