--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Alexa HF skill",
   "main": "index.js",
   "dependencies": {
+    "cron": "^1.3.0",
     "jovo-framework": "^1.3.1",
-    "node-schedule": "^1.3.0",
-    "request": "^2.87.0",
-    "sync-request": "^6.0.0"
+    "request": "^2.87.0"
   },
   "devDependencies": {},
   "scripts": {
